# python-sdk

./: README.md  pyproject.toml
examples/: compare_stations.py  poll_accuracy.py  trading_bot_workflow.py
src/deltadaemon/: __init__.py  _transport.py  client.py  errors.py  models.py
tests/: test_client.py  test_errors.py  test_models.py
