[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deltadaemon"
version = "0.1.0"
description = "Python SDK for the DeltaDaemon API - historical NWS forecast accuracy data"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "DeltaDaemon" }]
keywords = ["weather", "forecast", "nws", "accuracy", "delta-daemon"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "aiohttp>=3.9.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[project.urls]
Homepage = "https://deltadaemon.com"
Documentation = "https://deltadaemon.com/docs"

[tool.hatch.build.targets.wheel]
packages = ["src/deltadaemon"]
